--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,6 @@
     <%= yield %>
       </div>
     </main>
-    <%= render "laupits/footer" %>
+    <%= render "layouts/footer" %>
   </body>
 </html>
