--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -9,7 +9,7 @@
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
-    height: calc(100% - 80%);
+    height: calc(100% - 80px);
     max-height: calc(100% - 80px);
 }
 
