--- a/app/views/tags/_remove_modal.js.erb
+++ b/app/views/tags/_remove_modal.js.erb
@@ -1,5 +1,5 @@
 //モーダルを閉じる処理
-<%= element ||= "#tagModal" %>
+//<%= element ||= "#tagModal" %>
 
 $("<%= element %>").modal("hide");
 $("body").removeClass("modal-open");
